syntax = "proto3";

import "github.com/loomnetwork/loom/loom.proto";

message DeployTx {
    Address to = 1;
    bytes code = 2;
}

message SendTx {
    Address to = 1;
    // Function name
    // Args
}
